--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -5,6 +5,11 @@ mappings.mappedTermUrl=http://localhost/data/mappings.json
 
 server.port=8081
 
+management.endpoint.env.enabled=true
+management.endpoints.web.base-path=/manage
+management.endpoints.web.exposure.include=env
+
+
 # H2 Config
 spring.datasource.url=jdbc:h2:${data-dir}/h2-db/data;AUTO_SERVER=true;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=neo4j
