--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -4,7 +4,7 @@ logging.level.=INFO
 mappings.mappedTermUrl=http://localhost/data/mappings.json
 
 server.port=8081
-
+spring.jackson.serialization.indent_output=true
 management.endpoint.env.enabled=true
 management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=env
