--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -9,6 +9,7 @@ management.endpoint.env.enabled=true
 management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=env
 
+data-dir=
 
 # H2 Config
 spring.datasource.url=jdbc:h2:${data-dir}/h2-db/data;AUTO_SERVER=true;DB_CLOSE_ON_EXIT=FALSE
@@ -21,5 +22,3 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/db-admin/console
 spring.h2.console.settings.web-allow-others=true
-
-data-dir=/nfs/web-hx/mouseinformatics/pdx/finderroot
