--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -3,13 +3,19 @@ logging.level.=INFO
 
 mappings.mappedTermUrl=http://localhost/data/mappings.json
 
-#server.port=8081
+server.port=8080
 spring.jackson.serialization.indent_output=true
 management.endpoint.env.enabled=true
 management.endpoints.web.base-path=/manage
 management.endpoints.web.exposure.include=env
 
+# Database location. Directory with files like providers data and mappings rules
+# Example: data-base-location=/Users/{user}/repos/pdx/pdxfinder-data
 data-dir=
+
+# Database location. It can be a directory (the same as data-dir) or the url of an server with the db
+# Example (directory): data-base-location=/Users/{user}/repos/pdx/pdxfinder-data
+# Example (server): data-base-location=tcp://hh-rke-wp-webadmin-20-worker-1.caas.ebi.ac.uk:31372
 data-base-location=
 
 # H2 Config
