--- a/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
+++ b/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
@@ -15,6 +15,14 @@ spec:
           imagePullPolicy: Always
           args:
             - --data-base-location=tcp://hh-rke-wp-webadmin-20-worker-1.caas.ebi.ac.uk:31372
+            - --data-dir=/opt/pdx-data
           ports:
             - containerPort: 8080
+          volumeMounts:
+            - name: pv-data
+              mountPath: /opt/pdx-data
+      volumes:
+        - name: pv-data
+          persistentVolumeClaim:
+            claimName: pdx-admin-api-dev-pvc
 
