--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -51,8 +51,11 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>2.8.0</version>
                 <configuration>
+                    <from>
+                        <image>adoptopenjdk:11-jre-hotspot</image>
+                    </from>
                     <to>
                         <image>docker.io/pdxfinder/pdx-admin-api:dev_0.0.1
                         </image>
