K8 configuration for production
- Set prod namespaces

--- a/k8-deploy/prod/pdx-h2-deployment.yaml
+++ b/k8-deploy/prod/pdx-h2-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: pdx-h2
+  namespace: pdx-admin-interface
 spec:
   replicas: 1
   template:
