--- a/k8-deploy/prod/pdx-admin-api-service.yaml
+++ b/k8-deploy/prod/pdx-admin-api-service.yaml
@@ -1,14 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pdx-admin-api-dev-service
+  name: pdx-admin-api-service
+  namespace: pdx-admin-interface
   labels:
-    name: pdx-admin-api-dev-service
+    name: pdx-admin-api-service
 spec:
   ports:
     - protocol: TCP
       port: 80
       targetPort: 8081
   selector:
-    app: pdx-admin-api-dev
+    app: pdx-admin-api
   type: NodePort
