Fix prod deployment and set nodeports

--- a/k8-deploy/prod/pdx-admin-api-service.yaml
+++ b/k8-deploy/prod/pdx-admin-api-service.yaml
@@ -10,6 +10,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8081
+      nodePort: 31847
   selector:
     app: pdx-admin-api
   type: NodePort
