--- a/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
+++ b/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: pdx-admin-api-dev
+  namespace: pdx-admin-interface-dev
 spec:
   replicas: 1
   template:
@@ -11,7 +12,7 @@ spec:
     spec:
       containers:
         - name: pdx-admin-api-dev
-          image: 'pdxfinder/pdx-admin-api:dev_0.0.1'
+          image: 'pdxfinder/pdx-admin-api:dev'
           imagePullPolicy: Always
           args:
             - --data-base-location=tcp://hh-rke-wp-webadmin-20-worker-1.caas.ebi.ac.uk:31372
