--- a/k8-deploy/prod/pdx-admin-api-deployment.yaml
+++ b/k8-deploy/prod/pdx-admin-api-deployment.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         - name: pdx-admin-api
-          image: 'pdxfinder/pdx-admin-api:0.0.1'
+          image: 'pdxfinder/pdx-admin-api:latest'
           imagePullPolicy: Always
           args:
             - --data-base-location=tcp://hh-rke-wp-webadmin-20-worker-1.caas.ebi.ac.uk:30792
