--- a/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
+++ b/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
         - name: pdx-admin-api-dev
-          image: 'pdxfinder/pdx-admin-api:dev'
+          image: 'pdxfinder/pdx-admin-api:latest'
           imagePullPolicy: Always
           args:
             - --data-base-location=tcp://hh-rke-wp-webadmin-20-worker-1.caas.ebi.ac.uk:31372
