Set explicitly nodePort for pdx-admin-api-dev-service.

--- a/k8-deploy/dev/pdx-admin-api-dev-service.yaml
+++ b/k8-deploy/dev/pdx-admin-api-dev-service.yaml
@@ -9,6 +9,7 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8081
+      nodePort: 32368
   selector:
     app: pdx-admin-api-dev
   type: NodePort
