Set node ports for h2-dev-service

--- a/k8-deploy/dev/pdx-h2-dev-service.yaml
+++ b/k8-deploy/dev/pdx-h2-dev-service.yaml
@@ -10,10 +10,12 @@ spec:
       protocol: TCP
       port: 81
       targetPort: 81
+      nodePort: 31933
     - name: h2-tcp
       protocol: TCP
       port: 1521
       targetPort: 1521
+      nodePort: 31372
   selector:
     app: pdx-h2-dev
   type: NodePort
