--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Default logging level to INFO
-logging.level.=INFO
+#logging.level.=INFO
 
 mappings.mappedTermUrl=http://localhost/data/mappings.json
 
@@ -23,7 +23,7 @@ spring.datasource.url=jdbc:h2:${data-base-location}/h2-db/data;AUTO_SERVER=true;
 spring.datasource.username=neo4j
 spring.datasource.password=neo5j
 spring.datasource.driver-class-name=org.h2.Driver
-spring.h2.console.settings.trace=true
+#spring.h2.console.settings.trace=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
