Fix access to internet from pods in k8
- Following instructions in https://www.ebi.ac.uk/seqdb/confluence/display/Proteomics/Git+continuous+integration+and+kubernetes+deployments
- Create method in OntologyTermService to call urls using an https proxy (might be converted in a more generic service in the future)

--- a/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
+++ b/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
@@ -19,6 +19,9 @@ spec:
             - --data-dir=/opt/pdx-data
           ports:
             - containerPort: 8081
+          envFrom:
+            - configMapRef:
+                name: pdx-admin-api-dev-config
           volumeMounts:
             - name: pv-data
               mountPath: /opt/pdx-data
