Improve fix to internet access from pods
- Move all changes to configuration at the k8 level
- Add configMaps to hx
- Uses JDK_JAVA_OPTIONS to set all the proxy parameters
- Reverse changes in OntologyTermService

--- a/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
+++ b/k8-deploy/dev/pdx-admin-api-dev-deployment.yaml
@@ -21,7 +21,8 @@ spec:
             - containerPort: 8081
           envFrom:
             - configMapRef:
-                name: pdx-admin-api-dev-config
+                name: pdx-admin-api-config
+
           volumeMounts:
             - name: pv-data
               mountPath: /opt/pdx-data
