--- a/k8-deploy/dev/configmap-hh.yaml
+++ b/k8-deploy/dev/configmap-hh.yaml
@@ -1,10 +1,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: pdx-admin-api-dev-config
+  name: pdx-admin-api-config
   namespace: pdx-admin-interface-dev
 data:
-  HTTP_PROXY_HOST: hh-wwwcache.ebi.ac.uk
-  HTTP_PROXY_PORT: "3128"
-  HTTPS_PROXY_HOST: hh-wwwcache.ebi.ac.uk
-  HTTPS_PROXY_PORT: "3128"
+  JDK_JAVA_OPTIONS: -Dhttps.proxyHost=hh-wwwcache.ebi.ac.uk -Dhttps.proxyPort=3128 -Dhttp.proxyHost=hh-wwwcache.ebi.ac.uk -Dhttp.proxyPort=3128
+  HTTP_PROXY: "http://hh-wwwcache.ebi.ac.uk:3128"
+  HTTPS_PROXY: "http://hh-wwwcache.ebi.ac.uk:3128"
+  http_proxy: "http://hh-wwwcache.ebi.ac.uk:3128"
+  https_proxy: "http://hh-wwwcache.ebi.ac.uk:3128"
+  no_proxy: "localhost,.cluster.local"
